Remove the release job from the release workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,13 @@ workflows:
     jobs:
       - hold:
           type: approval
-      - release:
-          requires:
-            - hold
-          filters:
-            branches:
-              ignore:
-                - master
+      # - release:
+      #     requires:
+      #       - hold
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
 
 jobs:
   release:
