Fix docker clause for announce

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,8 @@ workflows:
 
 jobs:
   announce:
-    docker: circleci/golang:1.13
+    docker:
+      - image: circleci/golang:1.13
     steps:
       - run: echo "Placeholder"
   release:
