Try adding a reset before merge

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           command: |
             git checkout master
             git pull origin master
+            git reset --hard origin/master
             git merge ${CIRCLE_BRANCH}
       - run:
           name: Install changelog utility
