--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run: git checkout master
       # - run: git pull --ff origin master
       - run: git reset --hard origin/master
-      - run: git log --oneline | head -n10
+      # - run: git log --oneline | head -n10
       - run: echo ${CIRCLE_BRANCH}
       - run:
           name: Merge into master
